# multistrainABM

./: .gitignore  Cargo.toml  README.md
R/: 2strain-vax.R  3strain-vax-resistance.R  3strain-vax.R  coexistence.R  figure-4.R  figure-5.R  figure-6.R  functions.R  get-av-dur-infect.R  main.R  neutrality.R  pre_vax_patterns.R  runs_no_res.R  sample_run.R  sample_run_cross.R  setup.R  trajectories.R  vax_induced_patterns.R  vims_trajectories.R  withinhost-illustration.R  withinhost.R
R/data/: data-analysis-all-regions.R  data-analysis2.R  neutrality-analysis.R  strain_freqs_simplified.RDS  strain_map_simplified.RDS
R/figures/: results_data_analysis.tex
src/: lib.rs
